[jgitflow-maven-plugin]merging 'feature-BACKLOG-6820' into 'master' Conflicts: 	package/jahia-installer-package/pom.xml 	pom.xml

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -162,7 +162,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-backlog_6820-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
