--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -355,7 +355,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>newsletter</artifactId>
-            <version>3.1.0</version>
+            <version>3.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
