--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -249,8 +249,8 @@
             <version>2.0.3</version>
             <scope>runtime</scope>
         </dependency>
-		<!-- end of Jahia Forge Modules -->
-        
+        <!-- end of Jahia Forge Modules -->
+
          <!-- Users and groups provider modules -->
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -278,36 +278,36 @@
             <version>3.0.5</version>
             <scope>runtime</scope>
         </dependency>
-        
+
         <!-- Document management modules -->
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-management-api</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer-service</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-thumbnails</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>video-thumbnails</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -316,7 +316,7 @@
             <version>3.0.2</version>
             <scope>runtime</scope>
         </dependency>
-        
+
         <!-- Pre-packaged demo sites -->
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
@@ -356,47 +356,47 @@
     <build>
         <plugins>
             <plugin>
-            	<artifactId>maven-dependency-plugin</artifactId>
-            	<executions>
-            		<execution>
-            			<id>modules</id>
-            			<goals>
-            				<goal>copy-dependencies</goal>
-            			</goals>
-            			<configuration>
-            				<outputDirectory>${project.build.directory}/modules</outputDirectory>
-            				<excludeGroupIds>org.jahia.prepackagedsites</excludeGroupIds>
-            				<excludeTransitive>true</excludeTransitive>
-            			</configuration>
-            		</execution>
-            		<execution>
-            			<id>demos</id>
-            			<goals>
-            				<goal>copy-dependencies</goal>
-            			</goals>
-            			<configuration>
-            				<outputDirectory>${project.build.directory}/prepackagedSites</outputDirectory>
-            				<includeGroupIds>org.jahia.prepackagedsites</includeGroupIds>
-            				<stripVersion>true</stripVersion>
-            				<excludeTransitive>true</excludeTransitive>
-            			</configuration>
-            		</execution>
-            	</executions>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>modules</id>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
+                            <excludeGroupIds>org.jahia.prepackagedsites</excludeGroupIds>
+                            <excludeTransitive>true</excludeTransitive>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>demos</id>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/prepackagedSites</outputDirectory>
+                            <includeGroupIds>org.jahia.prepackagedsites</includeGroupIds>
+                            <stripVersion>true</stripVersion>
+                            <excludeTransitive>true</excludeTransitive>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptor>src/main/assembly/src.xml</descriptor>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>src/main/assembly/src.xml</descriptor>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
