--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -287,7 +287,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-templates</artifactId>
-            <version>1.0.1</version>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
