--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.0.5</version>
+            <version>3.0.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.0.5</version>
+            <version>3.0.6-SNAPSHOT</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -168,7 +168,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.2</version>
+            <version>7.1.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
