--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -124,7 +124,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>facets</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -144,7 +144,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.3.1-SNAPSHOT</version>
+            <version>2.3.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -198,7 +198,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.5-SNAPSHOT</version>
+            <version>7.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -240,13 +240,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>translation</artifactId>
-            <version>7.1.2-SNAPSHOT</version>
+            <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.6-SNAPSHOT</version>
+            <version>7.1.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
