--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>location</artifactId>
-            <version>2.0.4</version>
+            <version>2.0.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
