--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -222,7 +222,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-system</artifactId>
-            <version>7.1.1</version>
+            <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
