[QA-9521] Use SNAPSHOT version of the templates-system module to include the fix: Check if we are processing server before updating system site node

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -229,7 +229,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-system</artifactId>
-            <version>8.0.0</version>
+            <version>8.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
