--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -235,7 +235,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.1</version>
+            <version>2.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
