--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -228,7 +228,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
