--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.0.1</version>
+            <version>1.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
