--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.1.6-SNAPSHOT</version>
+            <version>7.1.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -186,13 +186,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>7.1.6-SNAPSHOT</version>
+            <version>7.1.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.6-SNAPSHOT</version>
+            <version>7.1.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -222,13 +222,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-system</artifactId>
-            <version>7.1.2-SNAPSHOT</version>
+            <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.0.6-SNAPSHOT</version>
+            <version>2.0.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
