--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -181,7 +181,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.2-SNAPSHOT</version>
+            <version>7.2.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -229,13 +229,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-system</artifactId>
-            <version>8.0.1-SNAPSHOT</version>
+            <version>8.0.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
