--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -197,6 +197,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>site-settings-publication</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>socialsharing</artifactId>
             <version>2.0.2</version>
             <scope>runtime</scope>
