--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.1</version>
+            <version>7.2.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -247,7 +247,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.6</version>
+            <version>7.1.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
