--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -293,7 +293,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-templates</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
