--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -174,7 +174,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.1.3</version>
+            <version>7.1.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
