--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>7.2.0</version>
+            <version>7.2.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
