--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -247,7 +247,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.7-SNAPSHOT</version>
+            <version>7.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
