--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>seo</artifactId>
-            <version>7.1.1</version>
+            <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
