[QA-9906] Improved regex in the build-helper-maven-plugin configuration to also work for feature branch versions

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -218,7 +218,7 @@
                                 <configuration>
                                     <name>product.version.nosnapshot</name>
                                     <value>${project.version}</value>
-                                    <regex>-SNAPSHOT</regex>
+                                    <regex>-.*</regex>
                                     <replacement></replacement>
                                     <failIfNoMatch>false</failIfNoMatch>
                                 </configuration>
