--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -339,7 +339,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>digitall</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.4-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
