--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.2</version>
+            <version>7.2.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
