[BACKLOG-7269] Included snapshot of the serverSettings module with the google material theme support

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>8.0.1</version>
+            <version>8.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
