[BACKLOG-7492] included SNAPSHOT version of site-settings-publication module into the build

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-publication</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
