QA-9796: fix caches issues: - dx-base-demo-component node not caching correctly pager request attributes - AggregateCacheFilter not correctly restoring cached properties of a cached fragment

--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-components</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
