BACKLOG-8396, BACKLOG-8391: add MariaDB option in installers, remove standalone derby option

--- a/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
+++ b/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
@@ -134,7 +134,8 @@ jetty-*.jar,oro-*.jar,servlet-api-*.jar,tagsoup-*.jar,xmlParserAPIs-*.jar,\
 xom-*.jar,\
 derby*.jar,\
 mysql-connector-java-*.jar,\
-postgresql-*.jar
+postgresql-*.jar,\
+mariadb-java-client-*.jar
 
 
 # Default list of JAR files that should be scanned that overrides the default
