[BACKLOG-9430] Switched graphql-dxm-provider to a released version 1.0.6

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -131,7 +131,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>1.0.6-SNAPSHOT</version>
+            <version>1.0.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
