[BACKLOG-9506] Use (older) linux binaries (not linux64) for the Launch4j, because our build servers miss some dependencies for linux64 to be used

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -125,7 +125,7 @@
                 </os>
             </activation>
             <properties>
-                <os.family>linux64</os.family>
+                <os.family>linux</os.family>
                 <sign4j.executable>sign4j</sign4j.executable>
             </properties>
         </profile>
