BACKLOG-11190 rename repository (#12)

--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,9 @@
     <description>Jahia CE Full Package</description>
 
     <scm>
-        <connection>scm:git:git@github.com:Jahia/dxm-pack-private.git</connection>
-        <developerConnection>scm:git:git@github.com:Jahia/dxm-pack-private.git</developerConnection>
-        <url>https://github.com/Jahia/dxm-pack-private</url>
+        <connection>scm:git:git@github.com:Jahia/jahia-pack-private.git</connection>
+        <developerConnection>scm:git:git@github.com:Jahia/jahia-pack-private.git</developerConnection>
+        <url>https://github.com/Jahia/jahia-pack-private</url>
         <tag>HEAD</tag>
     </scm>
 
