BACKLOG-11623: Whitelisted scanning of jahia-ee-impl-*.jar (#29)

--- a/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
+++ b/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
@@ -206,7 +206,8 @@ tomcat.util.scan.StandardJarScanFilter.jarsToScan=\
 log4j-taglib*.jar,\
 log4j-web*.jar,\
 log4javascript*.jar,\
-slf4j-taglib*.jar
+slf4j-taglib*.jar,\
+jahia-ee-impl-*.jar
 
 # String cache configuration.
 tomcat.util.buf.StringCache.byte.enabled=true
