BACKLOG-12110: Added content-security-policy module

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -300,7 +300,12 @@
             <version>1.0.0</version>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>content-security-policy</artifactId>
+            <version>1.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
